Added a changelog a ReadMe and Changed version to 1.0.1
Added README.md with instructions for how to use the package.
Added Changelog.md with a list of changes made.
Changed version number from 1.0.0 to 1.0.1

--- a/Packages/com.ac.runtime-console/package.json
+++ b/Packages/com.ac.runtime-console/package.json
@@ -1,7 +1,8 @@
 {
   "name": "com.ac.runtime-console",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "Runtime Console",
-  "description": "a tool that calls allows users to run code through a command line.",
-  "unity": "2021.3"
+  "description": "a tool that allows users to run code through a command line.",
+  "unity": "2021.3",
+  "type": "tool"
 }
