--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "com.ac.runtime-console",
-  "version": "1.0.1",
+  "name": "com.sunny-tools.runtime-console",
+  "version": "1.3.1",
   "displayName": "Runtime Console",
-  "description": "A tool that allows users to run code through a command line.",
+  "description": "A tool that allows users to test code in a build through a command line.",
   "unity": "2021.3",
   "type": "tool"
 }
