Updated runtime console assembly ref settings
Updated the runtime console assembly ref settings.

--- a/Runtime/com.ac.runtime-console.asmdef
+++ b/Runtime/com.ac.runtime-console.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "com.ac.runtime-console"
+    "name": "com.ac.runtime-console",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
