--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "com.sunny-tools.runtime-console",
-  "version": "1.3.3",
+  "version": "2.5.9",
   "displayName": "Runtime Console",
-  "description": "A tool that allows users to test code in a build through a command line.",
+  "description": "A tool that allows users to test code in a build through a console.",
   "unity": "2021.3",
   "type": "tool"
 }
